--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
